{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 915,
  "lineage": "67f8f873-0a37-5e22-e99b-f170d64ca349",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_api_direct",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-24T07:53:55.970-07:00",
            "deny": [],
            "description": "Allow direct API access (usually proxied via Caddy)",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/galvanic-camp-475519-d6/global/firewalls/superdeploy-dev-network-allow-api-direct",
            "log_config": [],
            "name": "superdeploy-dev-network-allow-api-direct",
            "network": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/global/networks/superdeploy-dev-network",
            "priority": 1000,
            "project": "galvanic-camp-475519-d6",
            "self_link": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/global/firewalls/superdeploy-dev-network-allow-api-direct",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "api",
              "core"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "3001"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-24T07:53:55.899-07:00",
            "deny": [],
            "description": "Allow HTTP/HTTPS and Forgejo (3001) to edge servers",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/galvanic-camp-475519-d6/global/firewalls/superdeploy-dev-network-allow-http-https",
            "log_config": [],
            "name": "superdeploy-dev-network-allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/global/networks/superdeploy-dev-network",
            "priority": 1000,
            "project": "galvanic-camp-475519-d6",
            "self_link": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/global/firewalls/superdeploy-dev-network-allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "core",
              "edge"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-10-24T07:53:55.974-07:00",
            "deny": [],
            "description": "Allow all internal communication within VPC",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/galvanic-camp-475519-d6/global/firewalls/superdeploy-dev-network-allow-internal",
            "log_config": [],
            "name": "superdeploy-dev-network-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/global/networks/superdeploy-dev-network",
            "priority": 1000,
            "project": "galvanic-camp-475519-d6",
            "self_link": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/global/firewalls/superdeploy-dev-network-allow-internal",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1080",
                  "3128",
                  "8888"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-24T07:53:55.901-07:00",
            "deny": [],
            "description": "Allow proxy connections - PUBLIC ACCESS",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/galvanic-camp-475519-d6/global/firewalls/superdeploy-dev-network-allow-proxy",
            "log_config": [],
            "name": "superdeploy-dev-network-allow-proxy",
            "network": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/global/networks/superdeploy-dev-network",
            "priority": 1000,
            "project": "galvanic-camp-475519-d6",
            "self_link": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/global/firewalls/superdeploy-dev-network-allow-proxy",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "proxy"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_proxy_registry",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-24T07:53:55.908-07:00",
            "deny": [],
            "description": "Proxy Registry - PUBLIC ACCESS",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/galvanic-camp-475519-d6/global/firewalls/superdeploy-dev-network-allow-proxy-registry",
            "log_config": [],
            "name": "superdeploy-dev-network-allow-proxy-registry",
            "network": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/global/networks/superdeploy-dev-network",
            "priority": 1000,
            "project": "galvanic-camp-475519-d6",
            "self_link": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/global/firewalls/superdeploy-dev-network-allow-proxy-registry",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "core"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_rabbitmq_management",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "15672"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-24T07:53:55.937-07:00",
            "deny": [],
            "description": "RabbitMQ Management - PUBLIC ACCESS",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/galvanic-camp-475519-d6/global/firewalls/superdeploy-dev-network-allow-rabbitmq-mgmt",
            "log_config": [],
            "name": "superdeploy-dev-network-allow-rabbitmq-mgmt",
            "network": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/global/networks/superdeploy-dev-network",
            "priority": 1000,
            "project": "galvanic-camp-475519-d6",
            "self_link": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/global/firewalls/superdeploy-dev-network-allow-rabbitmq-mgmt",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "core",
              "queue"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5432",
                  "5672"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-24T07:53:56.088-07:00",
            "deny": [],
            "description": "Allow worker VMs to access core services (DB, Queue) - INTERNAL ONLY",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/galvanic-camp-475519-d6/global/firewalls/superdeploy-dev-network-allow-services",
            "log_config": [],
            "name": "superdeploy-dev-network-allow-services",
            "network": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/global/networks/superdeploy-dev-network",
            "priority": 1000,
            "project": "galvanic-camp-475519-d6",
            "self_link": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/global/firewalls/superdeploy-dev-network-allow-services",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "scrape",
              "worker"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "core",
              "db",
              "queue"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-24T07:53:55.931-07:00",
            "deny": [],
            "description": "Allow SSH from admin IP ranges",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/galvanic-camp-475519-d6/global/firewalls/superdeploy-dev-network-allow-ssh",
            "log_config": [],
            "name": "superdeploy-dev-network-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/global/networks/superdeploy-dev-network",
            "priority": 1000,
            "project": "galvanic-camp-475519-d6",
            "self_link": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/global/firewalls/superdeploy-dev-network-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "core",
              "proxy",
              "worker"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/galvanic-camp-475519-d6/global/networks/superdeploy-dev-network",
            "mtu": 0,
            "name": "superdeploy-dev-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "1554094474137054231",
            "project": "galvanic-camp-475519-d6",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/global/networks/superdeploy-dev-network"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-10-24T07:53:56.458-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/galvanic-camp-475519-d6/regions/us-central1/subnetworks/superdeploy-dev-network-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "superdeploy-dev-network-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/global/networks/superdeploy-dev-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "galvanic-camp-475519-d6",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/regions/us-central1/subnetworks/superdeploy-dev-network-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vm_core[0]",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "external_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.10.56.16",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-10-24T10:33:34.695-07:00",
            "id": "projects/galvanic-camp-475519-d6/regions/us-central1/addresses/cheapa-core-1-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "cheapa-core-1-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "galvanic-camp-475519-d6",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/regions/us-central1/addresses/cheapa-core-1-ip"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vm_core[0]",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20251014",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/zones/us-central1-a/disks/cheapa-core-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "environment": "dev",
              "has_api": "true",
              "has_db": "true",
              "has_edge": "true",
              "has_queue": "true",
              "project": "cheapa",
              "role": "core"
            },
            "enable_display": false,
            "id": "projects/galvanic-camp-475519-d6/zones/us-central1-a/instances/cheapa-core-1",
            "instance_id": "8713584100760749724",
            "label_fingerprint": "PSqQ8HBpiOk=",
            "labels": {
              "environment": "dev",
              "has_api": "true",
              "has_db": "true",
              "has_edge": "true",
              "has_queue": "true",
              "project": "cheapa",
              "role": "core"
            },
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "superdeploy:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAILIV8mSO1NNYqFED2c2dHLEAZQmBnGcEN+HhpEsJyyU8 deploy-only@superdeploy\n"
            },
            "metadata_fingerprint": "xpMFNfmf5iM=",
            "metadata_startup_script": "#!/bin/bash\n# Basic setup for Ansible\napt-get update\napt-get install -y python3 python3-pip sudo\n    \n# Create superdeploy user for Ansible\nif ! id superdeploy \u0026\u003e/dev/null; then\n  useradd -m -s /bin/bash superdeploy\n  echo \"superdeploy ALL=(ALL) NOPASSWD:ALL\" \u003e /etc/sudoers.d/superdeploy\nfi\n    \n# Add SSH key to superdeploy user\nmkdir -p /home/superdeploy/.ssh\necho \"ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAILIV8mSO1NNYqFED2c2dHLEA [...]
            "name": "cheapa-core-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.10.56.16",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/global/networks/superdeploy-dev-network",
                "network_ip": "10.0.0.7",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/regions/us-central1/subnetworks/superdeploy-dev-network-subnet",
                "subnetwork_project": "galvanic-camp-475519-d6"
              }
            ],
            "project": "galvanic-camp-475519-d6",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/zones/us-central1-a/instances/cheapa-core-1",
            "service_account": [
              {
                "email": "806653612707-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "api",
              "core",
              "db",
              "edge",
              "proxy-registry",
              "queue"
            ],
            "tags_fingerprint": "mE1o5ZpVT3s=",
            "terraform_labels": {
              "environment": "dev",
              "has_api": "true",
              "has_db": "true",
              "has_edge": "true",
              "has_queue": "true",
              "project": "cheapa",
              "role": "core"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.subnet",
            "module.vm_core.google_compute_address.external_ip"
          ]
        }
      ]
    },
    {
      "module": "module.vm_proxy[0]",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "external_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.41.26.237",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-10-24T10:33:34.663-07:00",
            "id": "projects/galvanic-camp-475519-d6/regions/us-central1/addresses/cheapa-proxy-1-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "cheapa-proxy-1-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "galvanic-camp-475519-d6",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/regions/us-central1/addresses/cheapa-proxy-1-ip"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vm_proxy[0]",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20251014",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/zones/us-central1-a/disks/cheapa-proxy-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "environment": "dev",
              "has_proxy": "true",
              "project": "cheapa",
              "role": "proxy"
            },
            "enable_display": false,
            "id": "projects/galvanic-camp-475519-d6/zones/us-central1-a/instances/cheapa-proxy-1",
            "instance_id": "1571194319490385564",
            "label_fingerprint": "aiDdaDeQjPY=",
            "labels": {
              "environment": "dev",
              "has_proxy": "true",
              "project": "cheapa",
              "role": "proxy"
            },
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "superdeploy:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAILIV8mSO1NNYqFED2c2dHLEAZQmBnGcEN+HhpEsJyyU8 deploy-only@superdeploy\n"
            },
            "metadata_fingerprint": "xpMFNfmf5iM=",
            "metadata_startup_script": "#!/bin/bash\n# Basic setup for Ansible\napt-get update\napt-get install -y python3 python3-pip sudo\n    \n# Create superdeploy user for Ansible\nif ! id superdeploy \u0026\u003e/dev/null; then\n  useradd -m -s /bin/bash superdeploy\n  echo \"superdeploy ALL=(ALL) NOPASSWD:ALL\" \u003e /etc/sudoers.d/superdeploy\nfi\n    \n# Add SSH key to superdeploy user\nmkdir -p /home/superdeploy/.ssh\necho \"ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAILIV8mSO1NNYqFED2c2dHLEA [...]
            "name": "cheapa-proxy-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.41.26.237",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/global/networks/superdeploy-dev-network",
                "network_ip": "10.0.0.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/regions/us-central1/subnetworks/superdeploy-dev-network-subnet",
                "subnetwork_project": "galvanic-camp-475519-d6"
              }
            ],
            "project": "galvanic-camp-475519-d6",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/zones/us-central1-a/instances/cheapa-proxy-1",
            "service_account": [
              {
                "email": "806653612707-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "proxy",
              "socks",
              "tinyproxy"
            ],
            "tags_fingerprint": "XI3zkCzAfKw=",
            "terraform_labels": {
              "environment": "dev",
              "has_proxy": "true",
              "project": "cheapa",
              "role": "proxy"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.subnet",
            "module.vm_proxy.google_compute_address.external_ip"
          ]
        }
      ]
    },
    {
      "module": "module.vm_scrape[0]",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "external_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "35.193.41.190",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-10-24T10:33:34.585-07:00",
            "id": "projects/galvanic-camp-475519-d6/regions/us-central1/addresses/cheapa-scrape-1-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "cheapa-scrape-1-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "galvanic-camp-475519-d6",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/regions/us-central1/addresses/cheapa-scrape-1-ip"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vm_scrape[0]",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20251014",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/zones/us-central1-a/disks/cheapa-scrape-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "environment": "dev",
              "has_worker": "true",
              "project": "cheapa",
              "role": "scrape"
            },
            "enable_display": false,
            "id": "projects/galvanic-camp-475519-d6/zones/us-central1-a/instances/cheapa-scrape-1",
            "instance_id": "3686076434114545308",
            "label_fingerprint": "lxy-oTbjZ00=",
            "labels": {
              "environment": "dev",
              "has_worker": "true",
              "project": "cheapa",
              "role": "scrape"
            },
            "machine_type": "e2-standard-4",
            "metadata": {
              "ssh-keys": "superdeploy:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAILIV8mSO1NNYqFED2c2dHLEAZQmBnGcEN+HhpEsJyyU8 deploy-only@superdeploy\n"
            },
            "metadata_fingerprint": "xpMFNfmf5iM=",
            "metadata_startup_script": "#!/bin/bash\n# Basic setup for Ansible\napt-get update\napt-get install -y python3 python3-pip sudo\n    \n# Create superdeploy user for Ansible\nif ! id superdeploy \u0026\u003e/dev/null; then\n  useradd -m -s /bin/bash superdeploy\n  echo \"superdeploy ALL=(ALL) NOPASSWD:ALL\" \u003e /etc/sudoers.d/superdeploy\nfi\n    \n# Add SSH key to superdeploy user\nmkdir -p /home/superdeploy/.ssh\necho \"ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAILIV8mSO1NNYqFED2c2dHLEA [...]
            "name": "cheapa-scrape-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.193.41.190",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/global/networks/superdeploy-dev-network",
                "network_ip": "10.0.0.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/regions/us-central1/subnetworks/superdeploy-dev-network-subnet",
                "subnetwork_project": "galvanic-camp-475519-d6"
              }
            ],
            "project": "galvanic-camp-475519-d6",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/galvanic-camp-475519-d6/zones/us-central1-a/instances/cheapa-scrape-1",
            "service_account": [
              {
                "email": "806653612707-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "browser",
              "scrape",
              "worker"
            ],
            "tags_fingerprint": "TQE5T6DU4UU=",
            "terraform_labels": {
              "environment": "dev",
              "has_worker": "true",
              "project": "cheapa",
              "role": "scrape"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.subnet",
            "module.vm_scrape.google_compute_address.external_ip"
          ]
        }
      ]
    }
  ]
}